# childe

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
debian/: changelog  control  copyright  install
src/: main.rs
