[package]
name = "childe"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "=4.0.32", features = ["std", "derive"], default-features = false }
swayipc = "3"
tokio = "1"
trawlcat = "=0.2.6"
regex-syntax = "=0.7.5"
toml_edit = "=0.19.8"
anstyle = "=0.2.5"
clap_lex = "=0.3.0"
regex = "=1.9.6"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
zvariant = "=3.4.1"
zvariant_derive = "=3.4.1"